# sesdiff

./: .gitignore  Cargo.toml  README.md
.github/workflows/: sesdiff.yml  wheels.yml
python/: .gitignore  Cargo.toml  README.md  pyproject.toml  sesdiff.pyi  test.py
python/src/: lib.rs
src/: lib.rs  main.rs
tests/: main.rs
