[package]
name = "sesdiff"
version = "0.1.1"
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
description = "Generates a shortest edit script (Myers' diff algorithm) to indicate how to get from the strings in column A to the strings in column B. Also provides the edit distance (levenshtein)."
homepage = "https://github.com/proycon/sesdiff/"
repository = "https://github.com/proycon/sesdiff"
documentation = "https://docs.rs/sesdiff"
categories = ["science","text-processing", "command-line-utilities"]
keywords = ["nlp","text-processing","lemmatization","linguistics"]
license = "GPL-3.0+"
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dissimilar = "1.0.2"
clap = "2.33.2"
